tests/fail/elaboration/numeric-literal/mismatched-length.snap
stdout = ''
stderr = '''
error: mismatched array length
  ┌─ tests/fail/elaboration/numeric-literal/mismatched-length.fathom:3:1
  │
3 │ [3, 4] : Array8 12 U32
  │ ^^^^^^ found length: 2

'''
